--- a/views/api.html
+++ b/views/api.html
@@ -26,6 +26,7 @@
 
         <ul>
             <li><a href="/api/data" target="_blank">Data</a></li>
+            <li><a href="/api/data/now" target="_blank">Current schedule</a></li>
             <li><a href="/api/data/next" target="_blank">Future Schedule for next 5 days</a></li>
             <li><a href="/api/heat/on" target="_blank">Heat on</a></li>
             <li><a href="/api/heat/off" target="_blank">Heat off</a></li>
