--- a/views/api.html
+++ b/views/api.html
@@ -30,6 +30,8 @@
             <li><a href="/api/data/next" target="_blank">Future Schedule for next 5 days</a></li>
             <li><a href="/api/heat/on" target="_blank">Heat on</a></li>
             <li><a href="/api/heat/off" target="_blank">Heat off</a></li>
+            <li><a href="/api/mode/auto" target="_blank">Set Mode auto</a></li>
+            <li><a href="/api/mode/off" target="_blank">Set mode off</a></li>
             <li><a href="/api/log/heating" target="_blank">Heating Log</a></li>
             <li><a href="/api/log/sensors" target="_blank">Sensors Log</a></li>
         </ul>
