Updates to app. Notification test page. Start of mode switch

--- a/views/api.html
+++ b/views/api.html
@@ -20,27 +20,28 @@
 
 <body>
 
-    <div>
+<div>
 
-        <h1>Heating API</h1>
+    <h1>Heating API</h1>
 
-        <ul>
-            <li><a href="/api/data" target="_blank">Data</a></li>
-            <li><a href="/api/data/now" target="_blank">Current schedule</a></li>
-            <li><a href="/api/data/next" target="_blank">Future Schedule for next 5 days</a></li>
-            <li><a href="/api/heat/on" target="_blank">Heat on</a></li>
-            <li><a href="/api/heat/off" target="_blank">Heat off</a></li>
-            <li><a href="/api/mode/auto" target="_blank">Set Mode auto</a></li>
-            <li><a href="/api/mode/off" target="_blank">Set mode off</a></li>
-            <li><a href="/api/log/heating" target="_blank">Heating Log</a></li>
-            <li><a href="/api/log/sensors" target="_blank">Sensors Log</a></li>
-        </ul>
-    </div>
+    <ul>
+        <li><a href="/api/data" target="_blank">Data</a></li>
+        <li><a href="/api/data/now" target="_blank">Current schedule</a></li>
+        <li><a href="/api/data/next" target="_blank">Future Schedule for next 5 days</a></li>
+        <li><a href="/api/heat/on" target="_blank">Heat on</a></li>
+        <li><a href="/api/heat/off" target="_blank">Heat off</a></li>
+        <li><a href="/api/mode/auto" target="_blank">Set Mode auto</a></li>
+        <li><a href="/api/mode/off" target="_blank">Set mode off</a></li>
+        <li><a href="/api/log/heating" target="_blank">Heating Log</a></li>
+        <li><a href="/api/log/sensors" target="_blank">Sensors Log</a></li>
+        <li><a href="/notify" target="_blank">Notify test</a></li>
+    </ul>
+</div>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
